--- a/packages/ui/index.html
+++ b/packages/ui/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <title>Roxygens - UI Starter Kit</title>
+    <title>jeffnts - UI Starter Kit</title>
   </head>
   <body>
     <div id="root"></div>
